[package]
name = "dyn_struct"
version = "0.3.0"
edition = "2018"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
repository = "https://github.com/nolanderc/dyn_struct"
description = "Construct dynamically sized types safely"
license = "MIT OR Apache-2.0"

[features]
default = ["derive"]
derive = ["dyn_struct_derive"]

[dependencies]
dyn_struct_derive = { version = "0.3.0", path = "derive", optional = true }
