[package]
name = "dyn_struct_derive"
version = "0.3.1"
edition = "2018"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
repository = "https://github.com/nolanderc/dyn_struct"
description = "Derive macros for the `dyn_struct` crate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dyn_struct_derive"
path="src/lib.rs"
proc-macro=true

[dependencies]
proc-macro2 = "1.0.30"
quote = "1.0.10"
syn = { version = "1.0.80", features = ["extra-traits"] }
